frame/support/test/tests/pallet_ui/call_missing_weight.stderr
error: A pallet::call requires either a concrete `#[pallet::weight($expr)]` or an
                               inherited weight from the `#[pallet:call(weight($type))]` attribute, but
                               none were given.
  --> tests/pallet_ui/call_missing_weight.rs:17:7
   |
17 |         pub fn foo(origin: OriginFor<T>) -> DispatchResultWithPostInfo {}
   |             ^^
